# rusty-lox

./: Cargo.toml  README.md  package-lock.json  program.lox  rustfmt.toml
src/: class.rs  env.rs  expr.rs  function.rs  instance.rs  interpreter.rs  log.rs  main.rs  parser.rs  resolver.rs  scanner.rs  syntax.rs  token.rs
src/interpreter/: data.rs  env.rs  mod.rs  tree_walker.rs
src/interpreter/tree_walker/: class.rs  env.rs  function.rs  instance.rs  mod.rs
src/interpreter/vm/: instruction.rs  mod.rs  result.rs  value.rs
tests/: integration_test.rs
tests-files/: classes.expected  classes.lox  closures.lox  control_flow.expected  control_flow.lox  edge_cases.expected  edge_cases.lox  expressions.expected  expressions.lox  functions.expected  functions.lox  inheritance.lox  variables.lox
